## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[venv]
extras =
    dev
    tests

[metadata]
url = https://github.com/HeavenVolkoff/async_tools
name = async_tools
author = Vítor Vasconcellos
version = 2.2.0
license = BSD-3-Clause
keywords =
    tools
    helper
    asyncio
maintainer = Vítor Vasconcellos
description = Helper function and classes for common asyncio tasks
classifiers =
    License :: OSI Approved :: BSD License
    License :: OSI Approved :: Apache Software License
    License :: OSI Approved :: Python Software Foundation License
    Framework :: AsyncIO
    Intended Audience :: Developers
    Development Status :: 4 - Beta
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    # https://pypi.org/pypi?%3Aaction=list_classifiers
download_url =
project_urls =
    Bug Tracker = https://github.com/HeavenVolkoff/async_tools/issues
    Source Code = https://github.com/HeavenVolkoff/async_tools
author_email = vasconcellos.dev@gmail.com
maintainer_email = vasconcellos.dev@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# str
packages = find:
    # Indicates which packages shoud be included in this module
    # find: and find_namespace: will automatically find all packages
# bool
zip_safe = True
    # Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 18.1, != 19.0
    setuptools >= 40.5.0
    # List all packages required in order to run your package's setup.py
# str
python_requires = >=3.6
    # Define the required python interpreter version to run you package
# list-semi
install_requires =
    typing_extensions
    importlib_metadata
    # List your packages dependencies
# bool
include_package_data = False
    # Automatically include in your package any data file declared inside MANIFEST.in
    # If possible, it is recommended to use package_data and exclude_package_data instead

# Put data files inside package
[options.package_data]
* = py.typed
# package_name = files_pattern, ...

# Custom options for automatic package search
[options.packages.find]
exclude =
    tests

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# extra_name = requirements, ...
dev =
    twine
    black
    isort
    venvtools
    # Put your development requirements here
docs =
    # Put your documentation requirements here
tests =
    codecov
    coverage
    asynctest
    # Put your tests requirements here
