## More info:
# https://setuptools.readthedocs.io/en/latest/setuptools.html
# https://packaging.python.org/guides/distributing-packages-using-setuptools
# https://www.python.org/dev/peps/pep-0345/#metadata-version

[metadata]
url = https://github.com/HeavenVolkoff/async_tools
name = async_tools
version = 3.0.0rc2
license = BSD-3-Clause
keywords =
    tools
    helper
    asyncio
    backport
author = Vítor Vasconcellos
author_email = vasconcellos.dev@gmail.com
maintainer = Vítor Vasconcellos
maintainer_email = vasconcellos.dev@gmail.com
description = Helper function and classes for common asyncio tasks
classifiers =
    Framework :: AsyncIO
    Intended Audience :: Developers
    Development Status :: 4 - Beta
license-file = LICENSE
download_url = https://github.com/HeavenVolkoff/async_tools/archive/master.zip
project_urls =
    Source Code = https://github.com/HeavenVolkoff/async_tools
    Bug Tracker = https://github.com/HeavenVolkoff/async_tools/issues
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8

[options]
# str
packages = find:
#   Indicates which packages should be included in this module
#   find: and find_namespace: will automatically find all packages
# bool
zip_safe = True
#   Indicates whether your package is able to be run from within a zip archive or not
# list-semi
setup_requires =
    pip >= 20.3
    setuptools >= 45.0.0
#   List all packages required in order to run your package's setup.py
# str
python_requires = ~=3.8
#   Define the required python interpreter version to run you package
# list-semi
install_requires =
# bool
include_package_data = False
#   Automatically include in your package any data file declared inside MANIFEST.in
#   If possible, it is recommended to use package_data and exclude_package_data instead

# Put data files inside package
[options.package_data]
* = py.typed
# package_name = files_pattern, ...

# Custom options for automatic package search
[options.packages.find]
# list-semi
exclude =
    tests

# Extra dependencies, can be installed with: `pip install package[extra]`
[options.extras_require]
# list-semi
dev =
    mypy
    twine
    black
    isort
    venvtools
# list-semi
docs =
# list-semi
tests =
    mypy
    codecov
    coverage
    asynctest

[venv]
extras =
    dev
    docs
    tests

[isort]
quiet=True
atomic=True
profile=black
src_paths=async_tools
line_length=99
length_sort=True
virtual_env=.venv
combine_star=True
order_by_type=True
dedup_headings=True
skip_gitignore=True
use_parentheses=True
multi_line_output=3
balanced_wrapping=True
combine_as_imports=True
import_heading_stdlib=Internal
include_trailing_comma=True
remove_redundant_aliases=True
import_heading_thirdparty=External
import_heading_firstparty=External
import_heading_localfolder=Project

[mypy]
pretty = True
color_output = True
error_summary = True
ignore_errors = False
follow_imports = normal
implicit_reexport = True
python_executable = ./.venv/bin/python
namespace_packages = True
check_untyped_defs = True

allow_redefinition = False
allow_untyped_globals = False

no_implicit_optional = True
no_silence_site_packages = False

strict = True
strict_optional = True
strict_equality = True

show_error_codes = True
show_none_errors = True
show_error_context = True
show_column_numbers = True

warn_no_return = True
warn_return_any = True
warn_unreachable = True
warn_redundant_casts = True

disallow_any_expr = False
disallow_any_explicit = False
disallow_any_generics = True
disallow_any_decorated = False
disallow_any_unimported = True
disallow_subclassing_any = True
disallow_untyped_defs = True
disallow_untyped_calls = True
disallow_untyped_decorators = True
disallow_incomplete_defs = True
